Fix error with end game image overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,10 @@ html {
   font-size: 62.5%;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 #game-screen {
   height: 100vh;
   width: 99vw;
